# Obsidian-Otto

./: .env.example  .gitignore  AGENTS.md  CHECKSUMS.sha256  DREAMS.md  HEARTBEAT.md  IDENTITY.md  MANIFEST.full.txt  MANIFEST.promised.txt  MEMORY.md  Otto-Realm-Heartbeat-Template.md  README.md  SOUL.md  TEAM_GUIDE.md  TOOLS.md  USER.md  ZIP-README-FIRST.txt  brain.bat  docker-clean.bat  docker-compose.yml  docker-probe.bat  docker-up.bat  doctor.bat  dream.bat  initial.bat  install-openclaw-plugin.bat  kairos.bat  launch-mcp.bat  main.bat  otto.bat  probe-openclaw-gateway.bat  pyproject.toml  query.bat  reindex.bat  reload-openclaw-gateway.bat  reload-openclaw-plugin.bat  requirements-optional.txt  sanity-check.bat  start.bat  status.bat  (+3 more)
.claude/: settings.local.json
.codex/: config.toml
.openclaw/: openclaw.json  workspace-state.json
Handoff/: b_execution_brief.md
Otto-Realm/: GOVERNANCE.md  OTTO-DESIGN.md  README.md
config/: app.yaml  brain.yaml  clarity_ngram_miner.json  clawhub_export.json  docker.yaml  dream.yaml  graph_shadow_protected_nodes.json  graph_shaper_noise_words.json  hardware.yaml  heartbeat_telemetry.yaml  kairos.yaml  kernelization.yaml  metadata_enrichment.yaml  migration-bridges.yaml  models.yaml  paths.yaml  personas.yaml  postgres.yaml  retrieval.yaml  routing.yaml  wellbeing.yaml
docs/: CLAWHUB_INTEGRATION.md  OPENCLAW_OTTO_BRIDGE.md  architecture.md  build-verification.md  cache-stack-and-events.md  cli-mcp-deferred.md  glossary.md  launcher.md  migration-plan.md  model-routing.md  openclud-injection-map.md  operator-wsl-native.md  (+5 more)
(+947 files in other folders)
